Change budgetPanel, expenseListPanel, budgetListPanel to local variable
remove it being property fields of mainwindow